--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 /* struttura header */
 
 header{
-    background-color: lightblue;
+    background-color:rgb(37, 94, 233);
 }
 
 .container-header{
@@ -27,20 +27,14 @@ header{
     display: flex;
     align-items: center;
     padding-left: 5px;
-    height: 50px;
-    background-color: orange;
     width: 25%;
-    border-style: dashed
 }
 
 .col-link{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    background-color: orange;
     width: 50%;
-    border-style: dashed
 }
 
 .col-login{
@@ -48,10 +42,7 @@ header{
     align-items: center;
     justify-content: flex-end;
     padding-right: 5px;
-    height: 50px;
-    background-color: orange;
     width: 25%;
-    border-style: dashed
 }
 
 ul{
@@ -61,8 +52,21 @@ ul{
     width: 100%;
 }
 
+li{
+    color: white;
+    cursor: pointer;
+}
+
 .padding-left{
-    padding-left: 5px;
+    padding-left: 20px;
+}
+
+.Accedi{
+    border-radius: 40px;
+    font-size: 14px;
+    padding: 7px 16px;
+    cursor: pointer;
+    border: none;
 }
 
 /* fine header */
@@ -70,7 +74,8 @@ ul{
 /* struttura titolo */
 
 .container-title{
-    background-color: blue;
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
 }
 
 .row-title{
@@ -82,11 +87,46 @@ ul{
 }
 
 .col-title{
-    background-color: violet;
     width: 60%;
-    height: 325px;
-    border-style: dashed
 }
+
+.title{
+    text-align: center;
+    color: white;
+}
+
+h1{
+    font-size: 56px;
+    font-weight: 800;
+}
+
+.subtitle{
+    margin-top: 40px;
+    line-height: 1.625;
+    font-size: 20px;
+}
+
+.Scarica{
+    border-radius: 28px;
+    font-size: 20px;
+    padding: 16px 32px;
+    margin-top: 24px;
+    margin-right: 24px;
+    border: none;
+    cursor: pointer;
+}
+
+.Apri{
+    border-radius: 28px;
+    font-size: 20px;
+    padding: 16px 32px;
+    margin-top: 24px;
+    background-color: rgb(54, 57, 63);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
 /* fine titolo */
 
 /* struttura main */
