--- a/css/style.css
+++ b/css/style.css
@@ -139,26 +139,29 @@ h1{
     display: flex;
     align-items: center;
     width: 75%;
-    height: 500px;
     margin: 0 auto;
 }
 
 .col-img{
     display: flex;
     align-items: center;
-    height: 400px;
-    background-color: lightblue;
-    width: 60%;
-    border-style: dashed
+    width: 70%;
+    margin-right: 60px;
 }
 
 .col-text{
-    display: flex;
-    align-items: center;
-    height: 400px;
-    background-color: pink;
-    width: 40%;
-    border-style: dashed
+    width: 30%;
+}
+
+h2{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+.col-text p{
+    margin-top: 24px;
+    line-height: 1.625;
 }
 
 .row-boxgreen{
