--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ h1{
 /* struttura main */
 
 .container-grey{
-    background-color: lightgray;
+    background-color: rgb(246, 246, 246);
 }
 
 .row-main{
@@ -140,17 +140,19 @@ h1{
     align-items: center;
     width: 75%;
     margin: 0 auto;
+    margin-top: 100px;
+    padding: 70px 0px 70px 0px;
 }
 
 .col-img{
     display: flex;
     align-items: center;
-    width: 70%;
+    width: 60%;
     margin-right: 60px;
 }
 
 .col-text{
-    width: 30%;
+    width: 40%;
 }
 
 h2{
