--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ header{
 }
 
 .container-header{
-    height: 75px;
     width: 75%;
     margin: 0 auto;
     display: flex;
+    padding-top: 20px;
 }
 
 .row{
@@ -83,7 +83,7 @@ li{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 425px;
+    padding: 50px 0px 100px 0px;
 }
 
 .col-title{
