--- a/css/style.css
+++ b/css/style.css
@@ -166,21 +166,22 @@ h2{
     line-height: 1.625;
 }
 
-.row-boxgreen{
-    display: flex;
-    align-items: center;
+.row-box{
     width: 75%;
-    height: 700px;
     margin: 0 auto;
+    margin-top: 100px;
+    padding: 70px 0px 70px 0px;
 }
 
-.col-boxgreen{
-    display: flex;
+.col-box{
+    text-align: center;
     align-items: center;
-    height: 600px;
-    background-color: green;
     width: 100%;
-    border-style: dashed
+}
+
+.col-box p{
+    margin-top: 24px;
+    line-height: 1.625;
 }
 
 /* fine main */
