--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,26 @@ h2{
     line-height: 1.625;
 }
 
+h4{
+    font-weight: 600;
+    font-size: 32px;
+    background-image: url(../img/stars.svg);
+    margin: 30px 300px 0px 300px;
+    padding: 10px;
+}
+
+.Scarica2{
+    border-radius: 28px;
+    font-size: 20px;
+    padding: 16px 32px;
+    margin-top: 24px;
+    margin-right: 24px;
+    border: none;
+    cursor: pointer;
+    background-color: rgb(121, 131, 245);
+    color: white;
+}
+
 /* fine main */
 
 /* struttura menu */
