--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Whitney', sans-serif;
 }
 
 /* struttura header */
@@ -58,7 +59,7 @@ li{
 }
 
 .padding-left{
-    padding-left: 20px;
+    padding-left: 50px;
 }
 
 .Accedi{
