--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ h2{
     line-height: 1.625;
 }
 
-h4{
+.title-img{
     font-weight: 600;
     font-size: 32px;
     background-image: url(../img/stars.svg);
@@ -209,34 +209,59 @@ h4{
 
 /* struttura menu */
 .container-menu{
-    background-color: black;
+    background-color: rgb(35, 39, 42);
+}
+
+.titlefooter{
+    font-weight: 600;
+    font-size: 32px;
+    color: rgb(88, 101, 242);
+    margin-bottom: 20px;
 }
 
 .row-menu{
     display: flex;
-    align-items: center;
     width: 75%;
-    height: 600px;
     margin: 0 auto;
+    padding: 80px 0px 30px 0px;
 }
 
 .col-social{
-    display: flex;
-    align-items: center;
-    height: 550px;
-    background-color: palevioletred;
     width: 40%;
-    border-style: dashed
 }
 
 .col-menu{
     display: flex;
-    align-items: center;
-    height: 550px;
-    background-color: cyan;
+    flex-direction: column;
     width: 20%;
-    border-style: dashed;
-    border-color: white;
+}
+
+h5{
+    font-size: 16px;
+    line-height: 24px;
+    color: rgb(88, 101, 242);
+}
+
+span{
+    color: white;
+    font-size: 16px;
+    line-height: 24px;
+    cursor: pointer;
+}
+
+.imgita{
+    width: 30px;
+    margin: 0px 8px 0px 0px;
+}
+
+.ita{
+    margin-bottom: 20px;
+}
+
+hr{
+    width: 75%;
+    margin: 0 auto;
+    background-color: rgb(121, 131, 245);
 }
 
 /* fine menu */
@@ -244,43 +269,38 @@ h4{
 /* struttura footer */
 
 footer{
-    background-color: black;
+    background-color: rgb(35, 39, 42);
 }
 
 .container-footer{
-    height: 75px;
     width: 75%;
     margin: 0 auto;
-    display: flex;
 }
 
 .row-footer{
     display: flex;
     align-items: center;
     width: 100%;
+    padding: 20px 0px 50px 0px;
 }
 
 .col-logo-footer{
-    display: flex;
-    align-items:center;
-    height: 50px;
-    background-color: aqua;
     width: 50%;
 }
 
 .col-button-footer{
     display: flex;
-    align-items: center;
     justify-content: flex-end;
-    height: 50px;
-    background-color: aqua;
     width: 50%;
 }
 
-span{
-    background-color: pink;
-    border-style: dashed;
-    padding: 3px 3px 3px 3px;
+.Registrati{
+    border-radius: 40px;
+    font-size: 14px;
+    padding: 7px 16px;
+    cursor: pointer;
+    border: none;
+    background-color: rgb(121, 131, 245);
 }
 
 /* fine footer */
