--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,10 @@ hr{
     background-color: rgb(121, 131, 245);
 }
 
+.logosocial{
+    width: 150px;
+}
+
 /* fine menu */
 
 /* struttura footer */
